<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hryzx.sourcbooks.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.hryzx.sourcbooks.ui.search.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.hryzx.sourcbooks.ui.bookmarks.BookmarksFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/navigation_mylibrary"
        android:name="com.hryzx.sourcbooks.ui.mylibrary.MyLibraryFragment"
        android:label="My Library"
        tools:layout="@layout/fragment_my_library" />
</navigation>