<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/txDiscover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discover"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txHomeDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_and_"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txDiscover"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/txHomeDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tabs_main">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/sourcbooks_black"
            android:layout_weight="0.4"
            android:contentDescription="@string/icon" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:tabGravity="center"
        app:tabMode="scrollable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txHomeDesc" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollhome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs_main"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpager_main"
                android:layout_width="match_parent"
                android:layout_height="232dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/txRecommendation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_might_"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewpager_main"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHomeBooks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:nestedScrollingEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txRecommendation"
                tools:listitem="@layout/item_book_list" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>