<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.BookDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Sourcbooks.Collapsed">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="420dp"
                app:layout_collapseMode="parallax">
                <ImageView
                    android:id="@+id/img_blurry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:srcCompat="@tools:sample/backgrounds/scenic"
                    android:contentDescription="@string/background" />
                <ImageView
                    android:id="@+id/img_detail"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/img_blurry"
                    tools:srcCompat="@tools:sample/backgrounds/scenic"
                    android:contentDescription="@string/cover" />
                <TextView
                    android:id="@+id/txTitleDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:paddingHorizontal="16dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_detail"
                    tools:text="@tools:sample/cities" />
                <TextView
                    android:id="@+id/txWriterDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:paddingHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    app:layout_constraintTop_toBottomOf="@id/txTitleDetail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="@tools:sample/full_names"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="top"
                android:background="@drawable/scrim_topdown"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="bottom"
                android:background="@drawable/scrim" />
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/anim_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back_24"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/txSect1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txSect2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/txSect2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/txSect3"
                app:layout_constraintStart_toEndOf="@id/txSect1"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/txSect3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txSect2"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/txSect1b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="8dp"
                android:text="@string/published"
                app:layout_constraintEnd_toEndOf="@id/txSect1"
                app:layout_constraintStart_toStartOf="@id/txSect1"
                app:layout_constraintTop_toBottomOf="@id/txSect1" />

            <TextView
                android:id="@+id/txSect2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="8dp"
                android:text="@string/number_of_pages"
                app:layout_constraintEnd_toEndOf="@id/txSect2"
                app:layout_constraintStart_toStartOf="@id/txSect2"
                app:layout_constraintTop_toBottomOf="@id/txSect2" />

            <TextView
                android:id="@+id/txSect3b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="8dp"
                android:text="@string/revision"
                app:layout_constraintEnd_toEndOf="@id/txSect3"
                app:layout_constraintStart_toStartOf="@id/txSect3"
                app:layout_constraintTop_toBottomOf="@id/txSect3" />

            <ListView
                android:id="@+id/lv_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:nestedScrollingEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txSect1b" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:drawableLeft="@drawable/ic_download_24"
                android:drawableTint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lv_detail" />

            <Button
                android:id="@+id/btn_remove_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:drawableLeft="@drawable/ic_delete_24"
                android:drawableTint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lv_detail" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>