<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="8dp"
    android:paddingHorizontal="16dp">

    <ImageView
        android:id="@+id/img_cover"
        android:layout_width="110dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/cover" />
    <ImageButton
        android:id="@+id/img_bookmark"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="0dp"
        android:src="@drawable/ic_bookmark_border_24"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/bookmark" />
    <TextView
        android:id="@+id/txTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@tools:sample/cities"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_cover"
        app:layout_constraintEnd_toStartOf="@id/img_bookmark"/>
    <TextView
        android:id="@+id/txWriter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@tools:sample/full_names"
        android:textSize="12sp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/txTitle"
        app:layout_constraintStart_toEndOf="@id/img_cover"
        app:layout_constraintEnd_toStartOf="@id/img_bookmark"/>

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:progressTint="#FBC02D"
        android:rating="5"
        app:layout_constraintBottom_toTopOf="@id/img_num_page"
        app:layout_constraintStart_toEndOf="@id/img_cover"
        style="?attr/ratingBarStyleSmall" />
    <ImageView
        android:id="@+id/img_num_page"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_menu_book_24"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toEndOf="@id/img_cover"
        app:layout_constraintBottom_toBottomOf="@id/img_cover"
        android:contentDescription="@string/numpg" />
    <TextView
        android:id="@+id/txNumPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@tools:sample/us_zipcodes"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/img_num_page"
        app:layout_constraintTop_toTopOf="@id/img_num_page"
        app:layout_constraintBottom_toBottomOf="@id/img_num_page" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/img_cover"
        app:layout_constraintStart_toEndOf="@id/img_cover"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>